--- a/index.html
+++ b/index.html
@@ -19,7 +19,15 @@
 
     <div id="movies-search"></div>
     <div id="movie-container"></div>
-    
+<!-- 
+    <div id="movie-detail"></div>
+    <div class="movie-trailer">
+        
+    </div>
+    <div class="movie-reviews">
+    </div>
+    <div class="similar-movies"></div>
+     -->
 
     <script src="js/apiTransaction.js"></script>
     <script src="js/app.js"></script>
