--- a/movie.html
+++ b/movie.html
@@ -19,6 +19,9 @@
 
     <div id="movies-search"></div>
     <div id="movie-detail"></div>
+    <div class="movie-trailer">
+        
+    </div>
     <div class="movie-reviews">
     </div>
     <div class="similar-movies"></div>
