--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon"> 
     <title>MyMovieList</title>
 </head>
 <body>
@@ -31,5 +32,8 @@
 
     <script src="js/apiTransaction.js"></script>
     <script src="js/app.js"></script>
+    <script>
+        homeData()
+    </script>
 </body>
 </html>
