--- a/movie.html
+++ b/movie.html
@@ -28,6 +28,7 @@
         <div id="movies-search"></div>
         <!-- <div id="movie-container"></div> -->
         <div id="movie-detail"></div>
+        <div id="movie-detail2"></div>
         <div class="movie-trailer">
             
         </div>
