--- a/movie.html
+++ b/movie.html
@@ -21,11 +21,12 @@
                 <input type="text" id="searchInput">
             </div>
             <button id="search">Search</button>
+            <!-- <select name="genres" id="select-genre"></select> -->
         </form>
     </header>
 
     <main>
-        <div id="movies-search"></div>
+        <div id="movies-filter"></div>
         <!-- <div id="movie-container"></div> -->
         <div id="movie-detail"></div>
         <div id="movie-detail2"></div>
