--- a/movie.html
+++ b/movie.html
@@ -29,7 +29,7 @@
         <div id="movies-filter"></div>
         <!-- <div id="movie-container"></div> -->
         <div id="movie-detail"></div>
-        <div id="movie-detail2"></div>
+        <!-- <div id="movie-detail2"></div> -->
         <div class="movie-trailer">
             
         </div>
@@ -43,6 +43,7 @@
 
     <script src="js/apiTransaction.js"></script>
     <script src="js/app.js"></script>
+    <script src="js/data.js"></script>
     <script>
         movieData()
     </script>
