--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
 
 <body>
     <!-- <div id="page-container"> -->
+        <div id="landing-page">
+            <div class="container">
     <header>
-        <div class="container">
+        <!-- <div class="container"> -->
             <h1>Movix</h1>
             <div class="search-container">
                 <input type="text" id="searchInput" placeholder="Search movie">
@@ -46,19 +48,40 @@
                 <option value="primary_release_date.desc">Release Date</option>
             </select> -->
             </form>
-        </div>
+
+        <!-- </div> -->
     </header>
+</div>
+
+
+    
+    <div class="container">
+        <div class="landing-txt">
+            <h2>Browse your favorite movies</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+             Nam consequuntur reprehenderit ex a, modi perspiciatis repellat ad quae ea cumque.</p>
+        </div>
+    </div>
+
+    <!-- <div class="container2"> -->
+
+</div>
+
+    <!-- </div> -->
 
 
     <main>
         <div id="upcoming-slide">
-            <h1>Upcoming Movies</h1>
+            <div class="title-section">
+                <span></span>
+                <h1>Upcoming Movies</h1>
+            </div>
             <div class="swiper-container">
                 <div class="swiper-wrapper">
                 </div>
-                <!-- Pagination -->
+               
                 <div class="swiper-pagination"></div>
-                <!-- Arrows -->
+  
                 <div class="arrows">
                     <div class="swiper-button-next"></div>
                     <div class="swiper-button-prev"></div>
@@ -77,7 +100,10 @@
         </div>
 
         <div id="popular-container">
-            <h1>Popular Movies</h1>
+            <div class="title-section">
+                <span></span>
+                <h1>Popular Movies</h1>
+            </div>
             <div id="popular-movies">
             </div>
 
