--- a/index.html
+++ b/index.html
@@ -91,11 +91,10 @@
 
 
         <div id="filtered-movies">
-            <h1>Filtered items</h1>
             <div class="movies-filter"></div>
             <div class="pagination-btn">
-                <button class="filter-prev">Previous</button>
-                <button class="filter-next">Next</button>
+                <button class="filter-prev"><i class="fas fa-chevron-left"></i></button>
+                <button class="filter-next"><i class="fas fa-chevron-right"></i></button>
             </div>
         </div>
 
@@ -107,7 +106,7 @@
             <div id="popular-movies">
             </div>
 
-            <div class="popular-pagination">
+            <div class="pagination">
                 <button class="previous-page"><i class="fas fa-chevron-left"></i></button>
                 <button class="next-page"><i class="fas fa-chevron-right"></i></button>
                 <!-- <button class="previous-page">Prec</button>
@@ -116,9 +115,9 @@
         </div>
     </main>
 
-    <!-- <footer>
-    <h1>this is a footer</h1>
-</footer> -->
+    <footer>
+      <p><span>Movix</span> &copy 2020</p> 
+    </footer>
 
     </div>
     <script src="js/apiTransaction.js"></script>
