--- a/movie.html
+++ b/movie.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
+    integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous" />
     <link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon"> 
     <title>MyMovieList</title>
 
@@ -14,7 +17,7 @@
     </style> -->
 </head>
 <body>
-    <div id="landing-page">
+    <div id="movie-banner">
         <div class="container">
 <header>
     <!-- <div class="container"> -->
@@ -24,7 +27,9 @@
             <button id="search" type="submit"><i class="fas fa-search"></i></button>
         </div>
         <form>
-            <div class="filter-options">
+            <!-- <button class="filter-btn">Back to home</button> -->
+           <a href="index.html">Back to home</a>
+            <!-- <div class="filter-options">
                 <span>Order By:</span>
                 <select name="genres" id="select-genre"></select>
                 <select name="popular" id="filter-movie">
@@ -35,7 +40,7 @@
                     <option value="primary_release_date.desc">Release Date</option>
                 </select>
                 <button class="filter-btn">Filter</button>
-            </div>
+            </div> -->
             <!-- <button class="filter-btn">Filter</button> -->
             <!-- <select name="genres" id="select-genre"></select>
         <select name="popular" id="filter-movie">
@@ -46,6 +51,9 @@
             <option value="primary_release_date.desc">Release Date</option>
         </select> -->
         </form>
+        <!-- <button>
+            Go back to home
+        </button> -->
 
     <!-- </div> -->
 </header>
@@ -65,9 +73,18 @@
         <div class="movie-trailer">
             
         </div>
+        <!-- <div class="similar-container">
+            <h1>Similar Movies</h1>
+            <div class="similar-movies"> </div>
+         </div> -->
+<!-- 
+         <div class="swiper-container">
+            <div class="swiper-wrapper">
+            </div>
+           
+        </div>  -->
         <div class="movie-reviews">
         </div>
-        <!-- <div id="similar-movies"></div> -->
 
     </main>
 
@@ -80,9 +97,12 @@
     <script src="js/apiTransaction.js"></script>
     <script src="js/app.js"></script>
     <script src="js/data.js"></script>
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script>
         movieData()
     </script>
+
+
 
 </body>
 </html>
