--- a/movie.html
+++ b/movie.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
     integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous" />
     <link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon"> 
-    <title>MyMovieList</title>
+    <title>Movix</title>
 
     <!-- <style>
         #movie-container{
@@ -83,8 +83,16 @@
             </div>
            
         </div>  -->
-        <div class="movie-reviews">
+        <div class="reviews-section">
+            <div class="title-section">
+                <span></span>
+                <h1>Reviews</h1>
+            </div>
+            <div class="movie-reviews">
+            </div>
         </div>
+        <!-- <div class="movie-reviews">
+        </div> -->
 
     </main>
 
