--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- SwiperJs -->
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <!-- Jquery -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <!-- FontAwesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
         integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous" />
     <link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon">
@@ -15,11 +19,9 @@
 </head>
 
 <body>
-    <!-- <div id="page-container"> -->
         <div id="landing-page">
             <div class="container">
     <header>
-        <!-- <div class="container"> -->
             <h1>Movix</h1>
             <div class="search-container">
                 <input type="text" id="searchInput" placeholder="Search movie">
@@ -28,7 +30,9 @@
             <form>
                 <div class="filter-options">
                     <span>Order By:</span>
-                    <select name="genres" id="select-genre"></select>
+                        <select name="genres" id="select-genre">
+                        </select>
+
                     <select name="popular" id="filter-movie">
                         <option value="popularity.desc" selected="true">Popularity</option>
                         <option value="revenue.desc">Revenue</option>
@@ -36,20 +40,11 @@
                         <option value="vote_average.desc">Top Rated</option>
                         <option value="primary_release_date.desc">Release Date</option>
                     </select>
+
                     <button class="filter-btn">Search</button>
                 </div>
-                <!-- <button class="filter-btn">Filter</button> -->
-                <!-- <select name="genres" id="select-genre"></select>
-            <select name="popular" id="filter-movie">
-                <option value="popularity.desc" selected="true">Popularity</option>
-                <option value="revenue.desc">Revenue</option>
-                <option value="vote_count.desc">Most voted</option>
-                <option value="vote_average.desc">Top Rated</option>
-                <option value="primary_release_date.desc">Release Date</option>
-            </select> -->
             </form>
 
-        <!-- </div> -->
     </header>
 </div>
 
@@ -63,11 +58,7 @@
         </div>
     </div>
 
-    <!-- <div class="container2"> -->
-
 </div>
-
-    <!-- </div> -->
 
 
     <main>
@@ -101,8 +92,6 @@
                     <span id="genre"></span>
                     <span id="filter"></span>
                 </div>
-                <!-- <span id="genre"></span>
-                <span id="filter"></span> -->
             </div>
             <div class="name-value">
                 <div class="title-section">
@@ -115,9 +104,6 @@
                 </div>
                 
             </div>
-            <!-- <span id="genre"></span>
-            <span id="filter"></span> -->
-            <!-- <h1 class="search-name"></h1> -->
             <div class="movies-filter"></div>
             <div class="pagination-btn">
                 <button class="filter-prev"><i class="fas fa-chevron-left"></i></button>
@@ -136,8 +122,6 @@
             <div class="pagination">
                 <button class="previous-page"><i class="fas fa-chevron-left"></i></button>
                 <button class="next-page"><i class="fas fa-chevron-right"></i></button>
-                <!-- <button class="previous-page">Prec</button>
-                <button class="next-page">nect</button> -->
             </div>
         </div>
     </main>
@@ -185,6 +169,7 @@
                 },
             }
         });
+
     </script>
 </body>
 
