--- a/movie.html
+++ b/movie.html
@@ -1,112 +1,113 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.css" />
 
-    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
-    <!-- FontAwesome -->
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
-      integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
-      crossorigin="anonymous"
-    />
-    <link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="css/style.css" />
 
-    <!-- Jquery -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+  <!-- FontAwesome -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
+    integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous" />
+  <link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon" />
 
-    <!-- Magnific-popup -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.css"
-    />
+  <!-- Jquery -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
-    <title>Movix</title>
+  <!-- Magnific-popup -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.css" />
 
-  </head>
-  <body>
-    <div id="movie-banner">
-      <div class="container">
-        <header>
+  <title>Movix</title>
+</head>
+
+<body>
+  <div id="movie-banner">
+    <div class="container">
+      <header>
+        <a href="index.html">
           <h1>Movix</h1>
-          <!-- <div class="search-container"> -->
-            <input type="text" id="searchInput" placeholder="Search movie" />
-            <button id="search" type="submit">
-              <i class="fas fa-search"></i>
-            </button>
-          <!-- </div> -->
-          <div class="back-home">
-            <a href="index.html">Back to home</a>
-          </div>
-        </header>
-      </div>
-
-      <div class = "movie-trailer">
-      </div>
+        </a>
+        <!-- <div class="search-container"> -->
+        <input type="text" id="searchInput" placeholder="Search movie" />
+        <button id="search" type="submit">
+          <i class="fas fa-search"></i>
+        </button>
+        <!-- </div> -->
+        <div class="back-home">
+          <a href="index.html">Back to home</a>
+        </div>
+      </header>
     </div>
 
-    <main>
-      <div id="movies-filter"></div>
+    <div class="movie-trailer"></div>
+  </div>
 
-      <div class="about-movie">
-        <div id="movie-detail">
-        </div>
-      </div>
+  <main>
+    <div id="movies-filter"></div>
 
-      <!-- <div class="title-section">
+    <div class="about-movie">
+      <div id="movie-detail"></div>
+    </div>
+
+    <!-- <div class="title-section">
         <span></span>
         <h1>Similar Movies</h1>
      </div> -->
 
-      <div class="similar-section">
-        <div class="title-section">
-          <span></span>
-          <h1>Similar Movies</h1>
-       </div>
-       <div class="similar-movies">
+    <div class="similar-section">
+      <div class="title-section">
+        <span></span>
+        <h1>Similar Movies</h1>
+      </div>
+      <div class="similar-movies">
         <div class="swiper-container">
-          <div class="swiper-wrapper">
-          </div>
+          <div class="swiper-wrapper"></div>
+        </div>
       </div>
-      </div>
+    </div>
 
-      </div>
-
-      <!-- <div class = "movie-trailer">
+    <!-- <div class = "movie-trailer">
       </div> -->
 
-      
-
-      <div class="reviews-section">
-        <div class="title-section">
-          <span></span>
-          <h1>Reviews</h1>
-        </div>
-        <div class="movie-reviews"></div>
+    <div class="reviews-section">
+      <div class="title-section">
+        <span></span>
+        <h1>Reviews</h1>
       </div>
-    </main>
+      <div class="movie-reviews"></div>
+    </div>
+  </main>
 
-    <footer>
-      <p><span>Movix</span> &copy 2020</p>
-    </footer>
+  <footer>
+    <p><span>Movix</span> &copy 2020</p>
+  </footer>
+
+  <div class="loader-wrapper">
+    <div class="lds-default">
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+    </div>
 
     <script src="js/apiTransaction.js"></script>
     <script src="js/app.js"></script>
     <script src="js/data.js"></script>
+    <script src="js/effects.js"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
     <script>
       movieData();
 
-
-        //magnificpopup
-        $(document).magnificPopup({
+      //magnificpopup
+      $(document).magnificPopup({
         delegate: ".popup-youtube",
-        disableOn: 700,
         type: "iframe",
         mainClass: "mfp-fade",
         removalDelay: 160,
@@ -115,33 +116,37 @@
         fixedContentPos: false,
       });
 
+      var swiper = new Swiper(".swiper-container", {
+        observer: true,
+        spaceBetween: 50,
+        autoplay: {
+          delay: 2500,
+          disableOnInteraction: false,
+        },
+        breakpoints: {
+          100: {
+            slidesPerView: 2,
+            spaceBetween: 25,
+          },
+          640: {
+            slidesPerView: 3,
+            spaceBetween: 25,
+          },
+          768: {
+            slidesPerView: 4,
+            spaceBetween: 25,
+          },
+          1024: {
+            slidesPerView: 7,
+            spaceBetween: 25,
+          },
+        },
+      });
 
-      var swiper = new Swiper('.swiper-container', {
-            observer: true,
-            spaceBetween: 50,
-            autoplay: {
-                delay: 2500,
-                disableOnInteraction: false,
-            },
-            breakpoints: {
-                100: {
-                    slidesPerView: 2,
-                    spaceBetween: 25,
-                },
-                640: {
-                    slidesPerView: 3,
-                    spaceBetween: 25,
-                },
-                768: {
-                    slidesPerView: 4,
-                    spaceBetween: 25,
-                },
-                1024: {
-                    slidesPerView: 7,
-                    spaceBetween: 25,
-                },
-            }
-        });
+      $(window).on("load", function () {
+        $(".loader-wrapper").fadeOut("slow");
+      });
     </script>
-  </body>
+</body>
+
 </html>
