--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
         integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous" />
     <link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon">
 
+    <!-- Smooth scroll -->
+    <script
+        src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll@15.0.0/dist/smooth-scroll.polyfills.min.js"></script>
 
     <title>Movix</title>
 </head>
@@ -22,7 +25,6 @@
     <div id="landing-page">
         <div class="container">
             <header>
-                <!-- <h1>Movix</h1> -->
                 <div class="search-container">
                     <a href="index.html">
                         <h1>Movix</h1>
@@ -49,13 +51,7 @@
                             <option value="primary_release_date.desc">Release Date</option>
                         </select>
 
-                        <button class="filter-btn">Search</button>
-
-                        <!-- <div class="burger nav">
-                        <div class="line1"></div>
-                        <div class="line2"></div>
-                        <div class="line3"></div>
-                    </div> -->
+                        <a class="filter-btn">Search</a>
                     </div>
                 </form>
 
@@ -74,7 +70,7 @@
 
         <div class="container">
             <div class="landing-txt">
-                <h2>Browse your favorite movie</h2>
+                <h2>Discover new movies</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     Nam consequuntur reprehenderit ex a, modi perspiciatis repellat ad quae ea cumque.</p>
             </div>
@@ -126,10 +122,10 @@
             </div>
 
         </div>
-        <div class="movies-filter"></div>
+        <div id="movies-filter"></div>
         <div class="pagination-btn">
-            <button class="filter-prev"><i class="fas fa-chevron-left"></i></button>
-            <button class="filter-next"><i class="fas fa-chevron-right"></i></button>
+            <a href="#filtered-movies" class="filter-prev"><i class="fas fa-chevron-left"></i></a>
+            <a href="#filtered-movies" class="filter-next"><i class="fas fa-chevron-right"></i></a>
         </div>
         </div>
 
@@ -142,29 +138,24 @@
             </div>
 
             <div class="pagination">
-                <button class="previous-page"> <i class="fas fa-chevron-left"></i> </button>
-                <button class="next-page"> <i class="fas fa-chevron-right"></i> </button>
+                <a href="#popular-container" class="previous-page"><i class="fas fa-chevron-left"></i></a>
+                <a href="#popular-container" class="next-page"><i class="fas fa-chevron-right"></i></a>
             </div>
         </div>
     </main>
 
     <footer>
         <p><span>Movix</span> &copy 2020</p>
+        <div class="socials">
+            <i class="fab fa-facebook-f"></i>
+            <i class="fab fa-twitter"></i>
+            <i class="fab fa-instagram"></i>
+            <i class="fab fa-youtube"></i>
+        </div>
     </footer>
 
     <div class="loader-wrapper">
-        <!-- <span class="loader"><span class="loader-inner"></span></span> -->
-        <div class="lds-default">
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-            <div></div>
-        </div>
-
+        <img src="assets/loader.svg" alt="" srcset="" />
     </div>
     <script src="js/apiTransaction.js"></script>
     <script src="js/app.js"></script>
@@ -206,6 +197,7 @@
             }
         });
 
+        //loader
         $(window).on("load", function () {
             $(".loader-wrapper").fadeOut("slow");
         });
