--- a/index.html
+++ b/index.html
@@ -12,11 +12,10 @@
     <!-- FontAwesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
         integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous" />
-    <link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon">
+    <link rel="shortcut icon" href="assets/movixicon.png" type="image/x-icon">
 
     <!-- Smooth scroll -->
-    <script
-        src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll@15.0.0/dist/smooth-scroll.polyfills.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll@15.0.0/dist/smooth-scroll.polyfills.min.js"></script>
 
     <title>Movix</title>
 </head>
@@ -24,7 +23,7 @@
 <body>
     <div id="landing-page">
         <div class="container">
-            <header>
+            <header data-scroll-header>
                 <div class="search-container">
                     <a href="index.html">
                         <h1>Movix</h1>
@@ -32,7 +31,7 @@
                     <input type="text" id="searchInput" placeholder="Search movie">
                     <button id="search" type="submit"><i class="fas fa-search"></i></button>
                 </div>
-                <form>
+                <form data-scroll-header>
                     <div class="close-nav">
                         <div class="line1"></div>
                         <div class="line2"></div>
@@ -64,15 +63,11 @@
             </header>
         </div>
 
-
-
-
-
         <div class="container">
             <div class="landing-txt">
                 <h2>Discover new movies</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                    Nam consequuntur reprehenderit ex a, modi perspiciatis repellat ad quae ea cumque.</p>
+                <p>Welcome to the Movix website! browse and find out which movies you would like to watch and the
+                    upcoming releases!</p>
             </div>
         </div>
 
@@ -182,13 +177,17 @@
                     slidesPerView: 2,
                     spaceBetween: 10,
                 },
-                640: {
+                390: {
                     slidesPerView: 3,
                     spaceBetween: 10,
                 },
-                768: {
+                640: {
                     slidesPerView: 4,
                     spaceBetween: 10,
+                },
+                780: {
+                    slidesPerView: 5,
+                    spaceBetween: 20,
                 },
                 1024: {
                     slidesPerView: 7,
