--- a/movie.html
+++ b/movie.html
@@ -16,7 +16,7 @@
       integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
       crossorigin="anonymous"
     />
-    <link rel="shortcut icon" href="assets/movixicon.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="#" type="image/x-icon" />
 
     <!-- Jquery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
