--- a/index.html
+++ b/index.html
@@ -137,6 +137,21 @@
                 <a href="#popular-container" class="next-page"><i class="fas fa-chevron-right"></i></a>
             </div>
         </div>
+
+        <!-- Series -->
+        <div id="popular-series-container">
+            <div class="title-section">
+                <span></span>
+                <h1>TV Shows</h1>
+            </div>
+            <div id="popular-series">
+            </div>
+
+            <div class="pagination">
+                <a href="#popular-series-container" class="previous-page" id="previous-series"><i class="fas fa-chevron-left"></i></a>
+                <a href="#popular-series-container" class="next-page" id="next-series"><i class="fas fa-chevron-right"></i></a>
+            </div>
+        </div>
     </main>
 
     <footer>
@@ -155,6 +170,7 @@
     <script src="js/apiTransaction.js"></script>
     <script src="js/app.js"></script>
     <script src="js/data.js"></script>
+    <script src="js/series.js"></script>
     <script src="js/effects.js"></script>
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
