--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon">
 
     <!-- Smooth scroll -->
-    <script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll@15.0.0/dist/smooth-scroll.polyfills.min.js"></script>
+    <script
+        src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll@15.0.0/dist/smooth-scroll.polyfills.min.js"></script>
 
     <title>Movix</title>
 </head>
@@ -23,12 +24,12 @@
 <body>
     <div id="landing-page">
         <div class="container">
-            <header data-scroll-header>
+            <header data-scroll-header style="width: 100%; right: 0px;">
                 <div class="search-container">
                     <a href="index.html">
                         <h1>Movix</h1>
                     </a>
-                    <input type="text" id="searchInput" placeholder="Search movie">
+                    <input type="text" id="searchInput" placeholder="Search for movies or TV shows">
                     <button id="search" type="submit"><i class="fas fa-search"></i></button>
                 </div>
                 <form data-scroll-header>
@@ -93,6 +94,23 @@
             </div>
         </div>
 
+        <div id="upcoming-slide">
+            <div class="title-section">
+                <span></span>
+                <h1>Trending</h1>
+            </div>
+            <div class="swiper-container">
+                <div class="swiper-wrapper" id="trending-wrapper">
+                </div>
+
+                <div class="swiper-pagination"></div>
+
+                <div class="arrows">
+                    <div class="swiper-button-next"></div>
+                    <div class="swiper-button-prev"></div>
+                </div>
+            </div>
+        </div>
 
         <div id="filtered-movies">
             <div class="item-searched">
@@ -148,8 +166,10 @@
             </div>
 
             <div class="pagination">
-                <a href="#popular-series-container" class="previous-page" id="previous-series"><i class="fas fa-chevron-left"></i></a>
-                <a href="#popular-series-container" class="next-page" id="next-series"><i class="fas fa-chevron-right"></i></a>
+                <a href="#popular-series-container" class="previous-page" id="previous-series"><i
+                        class="fas fa-chevron-left"></i></a>
+                <a href="#popular-series-container" class="next-page" id="next-series"><i
+                        class="fas fa-chevron-right"></i></a>
             </div>
         </div>
     </main>
