--- a/tv-show.html
+++ b/tv-show.html
@@ -34,7 +34,7 @@
   <body>
     <div id="movie-banner">
       <div class="container">
-        <header class="details-header">
+        <header class="details-header" style="width: 100%; right: 0px; position: fixed;">
           <a href="index.html">
             <h1>Movix</h1>
           </a>
