--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <a href="index.html">
                         <h1>Movix</h1>
                     </a>
-                    <input type="text" id="searchInput" placeholder="Search for movies or TV shows">
+                    <input type="text" id="searchInput" placeholder="Buscar por filmes os séries">
                     <button id="search" type="submit"><i class="fas fa-search"></i></button>
                 </div>
                 <form data-scroll-header>
@@ -39,19 +39,19 @@
                         <div class="line3"></div>
                     </div>
                     <div class="filter-options">
-                        <span>Order By:</span>
+                        <span>Ordenar por:</span>
                         <select name="genres" id="select-genre">
                         </select>
 
                         <select name="popular" id="filter-movie">
-                            <option value="popularity.desc" selected="true">Popularity</option>
-                            <option value="revenue.desc">Revenue</option>
-                            <option value="vote_count.desc">Most voted</option>
-                            <option value="vote_average.desc">Top Rated</option>
-                            <option value="primary_release_date.desc">Release Date</option>
+                            <option value="popularity.desc" selected="true">Popularidade</option>
+                            <option value="revenue.desc">Renda</option>
+                            <option value="vote_count.desc">Mais votados</option>
+                            <option value="vote_average.desc">Melhores avaliados</option>
+                            <option value="primary_release_date.desc">Data de lançamento</option>
                         </select>
 
-                        <a class="filter-btn">Search</a>
+                        <a class="filter-btn">Buscar</a>
                     </div>
                 </form>
 
@@ -66,9 +66,8 @@
 
         <div class="container">
             <div class="landing-txt">
-                <h2>Discover new movies</h2>
-                <p>Welcome to the Movix website! browse and find out which movies you would like to watch and the
-                    upcoming releases!</p>
+                <h2>Novos filmes e séries</h2>
+                <p>Bem-vindo ao Movix!<br/> Procure e descubra filmes e séries que você gostaria de assistir e também os principais lançamentos!</p>
             </div>
         </div>
 
@@ -79,7 +78,7 @@
         <div id="upcoming-slide">
             <div class="title-section">
                 <span></span>
-                <h1>Upcoming Movies</h1>
+                <h1>Em breve</h1>
             </div>
             <div class="swiper-container">
                 <div class="swiper-wrapper">
@@ -97,7 +96,7 @@
         <div id="upcoming-slide">
             <div class="title-section">
                 <span></span>
-                <h1>Trending</h1>
+                <h1>Em Alta</h1>
             </div>
             <div class="swiper-container">
                 <div class="swiper-wrapper" id="trending-wrapper">
@@ -116,9 +115,9 @@
             <div class="item-searched">
                 <div class="title-section">
                     <span></span>
-                    <h1>Popular Movies</h1>
+                    <h1>Filmes Populares</h1>
                 </div>
-                <span class="title-searched">You searched for: </span>
+                <span class="title-searched">Você procurou por: </span>
                 <div class="texts">
                     <span id="genre"></span>
                     <span id="filter"></span>
@@ -127,9 +126,9 @@
             <div class="name-value">
                 <div class="title-section">
                     <span></span>
-                    <h1>Popular Movies</h1>
+                    <h1>Filmes Populares</h1>
                 </div>
-                <span class="title-searched">You searched for: </span>
+                <span class="title-searched">Você procurou por: </span>
                 <div class="texts">
                     <span id="movie-name"></div>
             </div>
@@ -145,7 +144,7 @@
         <div id="popular-container">
             <div class="title-section">
                 <span></span>
-                <h1>Popular Movies</h1>
+                <h1>Filmes Populares</h1>
             </div>
             <div id="popular-movies">
             </div>
@@ -160,7 +159,7 @@
         <div id="popular-series-container">
             <div class="title-section">
                 <span></span>
-                <h1>TV Shows</h1>
+                <h1>Séries</h1>
             </div>
             <div id="popular-series">
             </div>
