--- a/tv-show.html
+++ b/tv-show.html
@@ -38,12 +38,12 @@
           <a href="index.html">
             <h1>Movix</h1>
           </a>
-          <input type="text" id="searchInput" placeholder="Search serie" />
+          <input type="text" id="searchInput" placeholder="Buscar série" />
           <button id="search" type="submit">
             <i class="fas fa-search"></i>
           </button>
           <div class="back-home">
-            <a href="index.html">Back to home</a>
+            <a href="index.html">Voltar para o início</a>
           </div>
         </header>
       </div>
@@ -61,7 +61,7 @@
       <div class="similar-section">
         <div class="title-section">
           <span></span>
-          <h1>Similar Series</h1>
+          <h1>Séries similares</h1>
         </div>
         <div class="similar-movies">
           <div class="swiper-container">
@@ -73,7 +73,7 @@
       <div class="reviews-section">
         <div class="title-section">
           <span></span>
-          <h1>Reviews</h1>
+          <h1>Avaliações</h1>
         </div>
         <div class="movie-reviews"></div>
       </div>
